tests/snapshots/snapshot_tests__setup_screen_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                             * Welcome to Vauchi *
                         Privacy-focused contact cards.

┌  ────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private by design                                                       │
│      Your data is end-to-end encrypted and never leaves your control.        │
│                                                                              │
│  [D] Multi-device                                                            │
│      Use Vauchi on all your devices with seamless sync.                      │
└──────────────────────────────────────────────────────────────────────────────┘












[Enter] Create new identity  [h] I already have an identity  [q] quit
