tests/snapshots/snapshot_tests__setup_security.snap
---
source: tests/snapshot_tests.rs
description: SetupAddFields → press Next
expression: output
---
                            [1/9]  ● ○ ○ ○ ○ ○ ○ ○ ○
                                Welcome to Vauchi
                           Your contacts, your rules.

┌ Why Vauchi? ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private                                                                 │
│      End-to-end encrypted contact cards                                      │
│                                                                              │
│  [~] Always up to date                                                       │
│      Update your card and contacts see changes automatically                 │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Get Started  [?] help  [Esc] back  [q] quit
