tests/snapshots/snapshot_tests__sync_connected.snap
---
source: tests/snapshot_tests.rs
assertion_line: 250
expression: output
---
Sync

────────────────────────────────────────────────────────────────────────────────
┌Connection────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Relay: relay.vauchi.app                                                     │
│  Status: Connected                                                           │
│  Privacy: Tor: OFF                                                           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Sync Progress─────────────────────────────────────────────────────────────────┐
│███████████████████████████████████████████████████████                       │
│████████████████████████0 contacts | 3 pending updates                        │
│███████████████████████████████████████████████████████                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌Sync Info─────────────────────────────────────────────────────────────────────┐
│  Last sync: Synced: 2 contacts, 1 update                                     │
│                                                                              │
│  Sent 1 update                                                               │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[s]ync now  [esc] back  [?]help
