tests/snapshots/snapshot_tests__sync_idle.snap
---
source: tests/snapshot_tests.rs
expression: output
---
Sync

────────────────────────────────────────────────────────────────────────────────
┌Connection────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Relay: wss://relay.vauchi.app                                               │
│  Status: Disconnected                                                        │
│  Privacy: Tor: OFF                                                           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Sync Progress─────────────────────────────────────────────────────────────────┐
│██████████████████████████████████████████████████████████████████████████████│
│██████████████████████████████0 contacts synced ██████████████████████████████│
│██████████████████████████████████████████████████████████████████████████████│
└──────────────────────────────────────────────────────────────────────────────┘
┌Sync Info─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Press [s] to start sync                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[s]ync now  [esc] back  [?]help
