tests/snapshots/snapshot_tests__tor_settings.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                                   Tor Privacy

┌ [-] Tor Status ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  Status                                                                      │
│  Disabled                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Tor Settings ────────────────────────────────────────────────────────────────┐
│ [ ] Enable Tor                                                               │
│     Route all traffic through Tor                                            │
│ [ ] Prefer Onion Services                                                    │
│     Use .onion addresses when available                                      │
└──────────────────────────────────────────────────────────────────────────────┘









[Space] select  [?] help  [Esc] back  [q] quit
    Exchange    │    MyInfo     │   Contacts    │  ★ Settings   │     Help
