tests/snapshots/snapshot_tests__tor_settings_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                                * Tor Privacy *

┌ [-] Tor Status ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  Status                                                                      │
│  Disabled                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Tor Settings ────────────────────────────────────────────────────────────────┐
│ [ ] Enable Tor                                                               │
│     Route all traffic through Tor                                            │
│ [ ] Prefer Onion Services                                                    │
│     Use .onion addresses when available                                      │
└──────────────────────────────────────────────────────────────────────────────┘








                              [?] help  [Esc] back 

  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
