tests/snapshots/snapshot_tests__workflow_add_field.snap
---
source: tests/snapshot_tests.rs
description: "Add field happy path: MyInfo → AddField → MyInfo"
expression: output
---
═══ Step 1 ─ MyInfo — view card fields ═════════════════════
                                   Alice Smith

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘















[a] Add Entry  [Enter] Group View  [?] help  [Esc] back  [q] quit
   1 Exchange   │  2 ★ MyInfo   │  3 Contacts   │  4 Settings   │    5 Help

═══ Step 2 ─ AddField — press 'a' (Add Entry) ══════════════
                                    Add Entry
                                  Select a type

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ • Phone                                                                    │
│   • Email                                                                    │
│   • Website                                                                  │
│   bandcamp Bandcamp                                                          │
│   behance Behance                                                            │
│   bitbucket Bitbucket                                                        │
│   bluesky Bluesky                                                            │
└──────────────────────────────────────────────────────────────────────────────┘

┌─── Entry ────────────────────────────────────────────Visible for Groups ─────┐
│ ▸ Email alice@company.com (Work)                     Work                    │
│   Phone +41 79 123 45 67 (Mobile)                    Friend, Family          │
│   Website https://alice.example.com (Blog)           -                       │
└──────────────────────────────────────────────────────────────────────────────┘





[EDIT]   [Esc] Cancel  [?] help  [Esc] back  [q] quit
   1 Exchange   │  2 ★ MyInfo   │  3 Contacts   │  4 Settings   │    5 Help

═══ Step 3 ─ MyInfo — field saved, return to card ══════════
                                   Alice Smith

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘















[a] Add Entry  [Enter] Group View  [?] help  [Esc] back  [q] quit
   1 Exchange   │  2 ★ MyInfo   │  3 Contacts   │  4 Settings   │    5 Help
